# imglabel

./: README.md  design_brief.typ  gabor.py  gabor1.py  job.md  pyproject.toml
src/imglabel/: __init__.py  cli.py  core.py  gui.py
src/imglabel/core/: __init__.py  clustering.py  criteria.py  image_loading.py  line_detection.py  mask_computation.py
tests/: test_core.py
